scrollbar hidden , changes in top header and fixed

--- a/css/index.css
+++ b/css/index.css
@@ -4,10 +4,25 @@
     box-sizing: border-box;
 }
 
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar{
+    display: none;    
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
+
 #top-header{
     display: flex;
-    width: 100%;
-    justify-content: right;
+    justify-content: center;
+    text-align: center;
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     align-items: center;
     background-color: black;
 }
@@ -20,6 +35,12 @@
 #top-header img{
     width: 30px;
     height: auto;
+}
+
+.fix_header{
+    position: fixed;
+    width: 100%;
+    z-index: 5;
 }
 
 .payment_options{
